# serializd-importer

./: .env.example  .exclude-shows.example  .gitignore  .tmdbmap.example  MIGRATION.md  README.md  pyproject.toml  test_data.csv  test_netflix_parser.py  test_plex_parser.py  test_structure.py
nocommit/: .gitignore
src/netflix_to_serializd/: _clear_all_reviews.py  _filter_recent_csv.py  _log_episode_sanity.py  episode_logger.py  importer.py  netflix.py  serializd_adapter.py  title_parser.py  tmdb_client.py
src/serializd_importer/: _filter_movies_demo.py  _integration_sanity.py  _serializd_sanity.py  _title_parser_sanity.py  _tmdb_search_sanity.py  cli.py
src/serializd_importer/common/: episode_logger.py  importer.py  serializd_adapter.py
src/serializd_importer/sources/: base.py  csv_source.py  netflix.py  notion_star_trek.py  plex.py
tests/: test_importer.py  test_netflix.py
