[project]
name = "serializd-importer"
version = "0.2.0"
dependencies = [
    "tmdbsimple",
    "python-dotenv",
    "serializd-py @ git+https://github.com/mijewe/serializd-py.git",
]

[project.scripts]
serializd-importer = "serializd_importer.cli:main"

[tool.setuptools]
packages = ["serializd_importer"]
package-dir = {"" = "src"}

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

